# sun-notifier

./: pyproject.toml
sun_notifier/: app.py  config.yaml  settings.py  weather.py
